# Clang-LLVM-tutorial

./: .gitignore  .travis.yml  CIrewriter.cpp  CItutorial1.cpp  CMakeLists.txt  CREDITS.txt  ClangCItutorial2.cpp  ClangTutorial3.cpp  LICENSE.txt  Makefile  README.markdown  README.md  TODO.md  index.html  makefile  params.json  tutorial1.cpp  tutorial2.cpp  tutorial3.cpp  tutorial4.cpp  tutorial6.cpp
ClangCompilerInstance/: ClangCItutorial2.cpp  ClangCItutorial3.cpp  ClangCItutorial4.cpp
ClangSimple/: ClangTutorial1.cpp  ClangTutorial2.cpp  ClangTutorial3.cpp  ClangTutorial4.cpp  ClangTutorial6.cpp
ClangTypeSize/: ClangTypeSize.cpp  test.c
ClangTypeSize/testcases/: test_c2cpp.cpp
HelloWorld/: CMakeLists.txt
LLVMBuild/: buildall.sh
LLVMDebugInfo/: hello.c
LLVMHelloWorld/: CMakeLists.txt  LLVMQuickStart.sh
LLVMIRReader/: Makefile  ReadBitCode.cpp  foo.c
LLVMIRReader/test/: test.expected
LLVMInsight/: LLVMDebugUtils.cpp
LLVMJIT/: LLVMJIT1.cpp  LLVMJIT2.cpp
LLVMNewPass/: CMakeLists.txt  WriteNewPassNote.rst
LLVMNewPass/HelloPass/: CMakeLists.txt  HelloPass.cpp
LLVMNewPass/IfThenElseInfoPass/: CMakeLists.txt
LLVMNewPass/LoopInfoPass/: LoopInfoPass.cpp
LLVMQuickStart/: LLVMQuickStart.sh
LLVMSIMD/: Makefile.autovec  minmax_intrn.ll  reduc.c
Resources/: hello.c  hello_if.c  multiple_ret.cpp  newopertor.cpp
Resources/CPPTest/: pair_ret.cpp  reference_ret.cpp
Resources/LoopOpts/: minmax_intrn.c  reduc.c
